package org.upskill.clubedesportivo;

public interface Actividade {

    String CAMINHADA = "Caminhada";
    String CORRIDA = "Corrida";
    String CICLISMO = "Ciclismo";
    String NATACAO = "Natação";


}
