package org.upskill.clubedesportivo;

public interface Genero {

    String MASCULINO = "Masculino";
    String FEMININO = "Feminino";
}
